EPSON PM-870C	(Experimental)
EPSON PM-880C
EPSON PM-930C	(Experimental)
EPSON PM-940C	(Experimental)
EPSON PM-950C
EPSON PM-970C	(Experimental)
EPSON PM-980C	(Experimental)
EPSON PM-2000C
EPSON PM-2200C
EPSON PM-3000C
EPSON PM-3300C
EPSON PM-3500C
EPSON PM-3700C	(Experimental)
EPSON PM-4000PX
EPSON PM-5000C
EPSON PM-7000C
EPSON PM-9000C
EPSON PM-10000
EPSON PX-V500
EPSON PX-7000
EPSON PX-9000
HP DeskJet 340
HP DeskJet 400
HP DeskJet 500
HP DeskJet 500C
HP DeskJet 520
HP DeskJet 540C
HP DeskJet 550C
HP DeskJet 560C
HP DeskJet 600/600C (Single Cartridge)
HP DeskJet 600 series (2 Cartridge)
HP DeskJet 690 series (Photo-Ink capable)
HP DesignJet 230
HP DesignJet 250
HP DesignJet 430
HP DesignJet 450
HP DesignJet 455
HP DesignJet 488
HP DesignJet 700
HP DesignJet 750
HP DesignJet 2500
HP DesignJet 3500
HP DeskJet 810C
HP DeskJet 812C
HP DeskJet 840C
HP DeskJet 842C
HP DeskJet 845C
HP DeskJet 850C
HP DeskJet 855C
HP DeskJet 870C
HP DeskJet 890C
HP DeskJet 895C
HP DeskJet 900 series
HP PhotoSmart P1000
HP DeskJet 1100C
HP PhotoSmart P1100
HP DeskJet 1120C
HP DeskJet 1200C
HP DeskJet 1220C
HP DeskJet 1600C
HP DeskJet 2000 series
HP DeskJet 2500 series
HP LaserJet II series
HP LaserJet III series
HP LaserJet 4 series
HP LaserJet 4V, 4Si
HP LaserJet 5 series
HP LaserJet 5Si
HP LaserJet 6 series
Lexmark 4076
Lexmark Z42
Lexmark Z43
Lexmark Z52
Lexmark Z53
Olympus P-300 series (Experimental)
Olympus P-400 series (Experimental)
Sony UP-DP10	(Experimental)

The following is the complete list of printers believed to be
compatible with Gimp-print, along with recommended drivers.  Some of
these printers may work only partially; the specified drivers may not
support the full range of resolutions, paper sizes, media sources,
etc. that some of these printers may offer.

Printer Name                   Driver Name     Driver Description
------- ----                   ------ ----     ------ -----------
Apollo P-2100                  pcl-690         HP DeskJet 690 series